# kaolin

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: linux-amdflang-cmake.yaml  linux-gnu-cmake.yml  linux-nvfortran-cmake.yaml
src/: CMakeLists.txt  kaolin_array.F90  kaolin_array_base.F90  kaolin_device.F90  kaolin_device_enums.F90
src/wip/: kaolin_device_interfaces.F90
test/: CMakeLists.txt  allocate_kaolin_array.f90  create_kaolin_array_1d_x86_cpu.f90
